Sat Aug 31 17:45:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-borland-common.h:
          Created a new config file for the Borland compiler. This will be
          used on the Win32 platform and the Kylix3 compiler on Linux

        * ace/config-linux-common.h:
          When the Borland compiler is detected, include the
          config-borland-common.h file

        * ace/config-win32-borland.h:
          Moved most of the contents to the config-borland-common.h file,
          only the lines that are Win32 specific stay here.

Sat Aug 31 10:32:38 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Future.cpp (set): Removed a stray reference to "iterator"
	  and replaced the for loop with a while loop.  Thanks to Craig
 	  Rodrigues for reporting this.

Sat Aug 31 01:20:09 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
	                      Gary Duzan  <gduzan@bbn.com>

	* include/makeinclude/rules.nested.GNU: Rewritten by Gary Duzan.
	  If a list of directories is specified with DIRS= for a recursive
	  make, make will halt immediately and propagate a non-zero
	  return code to the shell if an error is encountered in a
	  subdirectory.  The present behavior does not propagate any
	  errors to make if there is an error in a subdirectory.  If make -k
	  is specified, make will keep on going even if it encounters an
	  error in a subdirectory, but it will also propagate a non-zero
	  return code to make when the make finishes.  The current behavior
	  is to keep on going if an error is encountered in a subdirectory,
	  but NOT propagate a non-zero return code upon termination of make.

	* ace/Makefile.dirs: (Added) Specifies the DIRS= list of directories
	  to invoke recursive makes on.

	* ace/Makefile.ace: (Added).  This builds libACE, like the old Makefile
	  did.

	* ace/Makefile: Invoke Makefile.ace first, then Makefile,dirs.  It
	  was necessary to split apart the DIRS= rule from the part of the