@@ -1,3 +1,13 @@
+Sat Aug 31 13:55:52 2002  Balachandran Natarajan  <bala@isis-server.vuse.vanderbilt.edu>
+
+	* ace/OS.i (ctime_r): This fixes a problem on Linux for the call
+	  to ::ctime_r where the pointer returned (result) is the same as
+	  the pointer (buf) passed in, causing the buffer to get clobbed
+	  if strsncpy is used subsequently to move the result back to the
+	  caller's buffer.
+
+	* tests/OS_Test.cpp: Added a test for ACE_OS::ctime_r ().
+
 Sat Aug 31 17:45:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-borland-common.h:
